# tauri-plugin-workspace

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
libs/border/: README.md
libs/border/src/: lib.rs
libs/border/src/macos/: border.rs
libs/popover/src/macos/: popover.rs
libs/toast/: Cargo.toml  README.md
libs/toast/src/: lib.rs
libs/toast/src/macos/: toast.rs
plugins/toast/examples/vanilla/: pnpm-lock.yaml
