[workspace]
members = ["libs/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.200", features = ["derive"] }
tauri = "2.0.0-beta.22"
tauri-build = "2.0.0-beta.17"
serde_json = "1"
thiserror = "2.0.3"

cocoa = "0.26.0"
objc = "0.2.7"
core-foundation = "0.10.0"
core-graphics = "0.24.0"
objc_id = { version = "0.1.1" }
objc-foundation = { version = "0.1.1" }
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.0", features = [
  "NSGeometry",
  "NSString",
  "NSTimer",
  "NSThread",
] }
objc2-app-kit = { version = "0.2.0", features = [
  "block2",
  "objc2-quartz-core",
  "NSBezierPath",
  "NSSharingService",
  "NSResponder",
  "NSWindow",
  "NSPanel",
  "NSView",
  "NSText",
  "NSTextField",
  "NSControl",
  "NSParagraphStyle",
  "NSVisualEffectView",
  "NSGraphics",
  "NSAnimation",
  "NSAnimationContext",
  "NSColor",
] }

block = "0.1.6"
block2 = "0.6.0"

windows-sys = { version = "0.59.0", features = [
  "Win32_UI",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi",
  "Win32_System",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
] }

image = "0.25.1"
markdown = "0.3.0"

color = { path = "libs/color" }
monitor = { path = "libs/monitor" }

[workspace.package]
edition = "2021"
authors = ["Victor Aremu <victor.olorunbunmi@gmail.com>"]
license = "Apache-2.0 OR MIT"
rust-version = "1.64"
